# aisteps

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  nixpacks.toml  railway.toml  roadmap-generator.md
.github/workflows/: lint.yml  test.yml
backend/: .dockerignore  .env.example  database.py  dockerfile  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_api.py  test_key.py
backend/core/: __init__.py  dependencies.py  security.py
backend/db/: database.py
backend/middleware/: __init__.py  security_headers.py
backend/models/: refresh_token.py  roadmap.py  user.py
backend/prompts/: config.yaml  critique.md  initial.md  refine.md
backend/routers/: auth.py  roadmap.py
backend/schemas/: auth.py
backend/services/: auth.py  gemini.py
backend/tests/: conftest.py  factories.py
backend/tests/e2e/: test_auth.py
backend/tests/integration/routers/: test_auth.py  test_roadmap.py
backend/tests/unit/models/: test_roadmap.py  test_user.py
backend/tests/unit/schemas/: test_auth.py  test_roadmap.py
backend/tests/unit/services/: test_auth.py  test_gemini.py
docs/: ci-testing.md
docs/features/auth/: auth-spec.md  security-spec.md
frontend/: dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: auth.ts  roadmap.ts
frontend/src/components/: ProgressSteps.tsx  RoadmapForm.tsx  RoadmapResult.tsx
frontend/src/components/auth/: AuthGuard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx
