[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

#----------------------------------
# ruff :formatter & linter
#----------------------------------
[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.ruff]       # 全体
line-length = 88  # 一行最大

[tool.ruff.lint]
select = [        # linter
    "E",          # スタイル系（インデント空白）
    "F",          # バグ（未使用import 未定義変数）
    "I"           # import並び順整理
]
